# agentic-playwright-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TEAM_GUIDE.md  command.sh  mkdocs.yml  pyproject.toml  vision_test_report.json
desktop/electron/: main.ts
desktop/src/: styles.css  types.ts
desktop/src/components/: MessageList.tsx  (+1 more)
desktop/tests/: agentStore.test.ts
docs/: index.md  team-intro.md
domains/: bilibili.yaml  douyin.yaml  example_baidu.yaml
skills/comment/: bilibili_comment.yaml
skills/others/: douyin_login.yaml
skills/send/: bilibili_publish.yaml
src/: __init__.py  config.py  sdk.py  server.py
src/core/: agent_loop.py  browser_manager.py  experience.py  llm_client.py  login_guard.py  recovery.py  script_generator.py  script_store.py  skill_router.py  task_splitter.py
src/desktop/: api.py  prompts.py  task_service.py
src/gui/: app.py
src/layer_1/: actions.py  wechat_client.py  wx_cli_client.py
src/layer_2/: __init__.py  controls.py
src/layer_3/: __init__.py  boss_results.py  config_updater.py  domain_loader.py
src/skill_library/: registry.json  registry.py  skills.yaml
tests/: test_agent_loop.py  test_bilibili_publish_skill.py  test_bilibili_search_skill.py  test_cli.py  test_desktop_backend.py  test_douyin_login_skill.py  test_experience.py  test_recovery.py  test_script_engine.py  test_script_generator.py  test_script_store.py  test_sdk.py  test_task_splitter.py  test_wechat_client_skill.py  test_wechat_history_sensitive.py  test_wechat_send_file_skill.py  test_wx_cli_client.py
tests/test_explore/: test_executor.py
(+21 files in other folders)
