[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-playwright-mcp"
version = "0.1.0"
description = "MCP server for agentic browser automation with Playwright"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agentic-playwright-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
